--- a/code/public/css/app.css
+++ b/code/public/css/app.css
@@ -149,8 +149,43 @@ legend {
   display: none;
 }
 
-h1 {
-  color: #2a4e6b;
+* {
+  box-sizing: border-box;
+  font-family: "Hiragino Kaku Gothic ProN", "Meiryo", sans-serif;
+}
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+  -webkit-text-size-adjust: 100%;
+}
+
+.clearfix::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  color: steelblue;
+}
+
+h1,
+h2,
+h3,
+h4,
+p,
+label {
+  color: #333;
+}
+
+.sample {
+  color: #252c47;
   font-size: 24px;
 }
 
