--- a/code/public/css/app.css
+++ b/code/public/css/app.css
@@ -186,9 +186,38 @@ label {
   color: #333;
 }
 
+.container {
+  width: 100%;
+  min-height: calc(100% - 120px);
+  background-color: white;
+}
+
+.top-wrapper {
+  width: 100%;
+  height: 320px;
+  background-color: darkgray;
+}
+
+.main-contents {
+  max-width: 960px;
+  margin: 0 auto;
+  background-color: whitesmoke;
+}
+
+.main-contents__box {
+  width: 100%;
+  padding: 10px;
+}
+
+.content {
+  background-color: white;
+  width: 100%;
+  min-height: 480px;
+  box-shadow: rgba(0, 0, 0, 0.5) 0px 2px 4px;
+}
+
 .sample {
   color: #49578b;
-  font-size: 24px;
 }
 
 .header {
@@ -198,7 +227,7 @@ label {
 }
 
 .header__box {
-  width: 1000px;
+  max-width: 960px;
   height: 100%;
   margin: 0 auto;
 }
