--- a/code/resources/sass/config/_config.scss
+++ b/code/resources/sass/config/_config.scss
@@ -44,3 +44,33 @@ a:hover{
 h1, h2, h3, h4, p, label{
   color: #333;
 }
+
+.container{
+    width: 100%;
+    min-height: calc(100% - 120px);
+    // 120 = header + footer
+    background-color: white;
+}
+
+.top-wrapper{
+    width: 100%;
+    height: 320px;
+    background-color: darkgray;
+}
+
+.main-contents{
+    max-width: 960px;
+    margin: 0 auto;
+    background-color: whitesmoke;
+    &__box{
+        width: 100%;
+        padding: 10px;
+    }
+}
+
+.content{
+    background-color: white;
+    width: 100%;
+    min-height: 480px;
+    box-shadow: $default-shadow;
+}
