--- a/code/resources/sass/shared/_header.scss
+++ b/code/resources/sass/shared/_header.scss
@@ -4,7 +4,7 @@
     width: 100%;
     box-shadow: rgba(0, 0, 0, 0.2) 0px 1px 2px;
     &__box{
-        width: 1000px;
+        max-width: 960px;
         height: 100%;
         margin: 0 auto;
         &__left{
