--- a/code/public/css/app.css
+++ b/code/public/css/app.css
@@ -213,7 +213,7 @@ label {
   background-color: white;
   width: 100%;
   min-height: 480px;
-  box-shadow: rgba(0, 0, 0, 0.5) 0px 2px 4px;
+  box-shadow: rgba(0, 0, 0, 0.5) 0px 1px 2px;
 }
 
 .sample {
@@ -223,7 +223,9 @@ label {
 .header {
   height: 60px;
   width: 100%;
-  box-shadow: rgba(0, 0, 0, 0.2) 0px 1px 2px;
+  box-shadow: rgba(0, 0, 0, 0.5) 0px 1px 2px;
+  position: relative;
+  z-index: 16;
 }
 
 .header__box {
@@ -257,5 +259,50 @@ label {
   color: #49578b;
   line-height: 40px;
   padding-left: 5px;
+}
+
+.navi-bar {
+  width: 100%;
+  height: 40px;
+  background-color: #49578b;
+  position: relative;
+  z-index: 8;
+  box-shadow: rgba(0, 0, 0, 0.5) 0px 1px 2px;
+}
+
+.navi-bar__box {
+  max-width: 960px;
+  height: 100%;
+  margin: 0 auto;
+}
+
+.navi-list {
+  width: 100%;
+  height: 100%;
+}
+
+.navi-list__content {
+  width: 320px;
+  height: 100%;
+  display: inline-block;
+  color: white;
+  text-align: center;
+  font-size: 14px;
+  line-height: 40px;
+  cursor: pointer;
+}
+
+.navi-list__content__link {
+  width: 100%;
+  height: 100%;
+  display: inline-block;
+  color: whitesmoke;
+  border: 1px solid #49578b;
+}
+
+.navi-list__content__link:hover {
+  background-color: steelblue;
+  color: whitesmoke;
+  border: 1px solid #98a1c2;
 }
 
