--- a/code/resources/sass/shared/_header.scss
+++ b/code/resources/sass/shared/_header.scss
@@ -2,7 +2,9 @@
 .header{
     height: 60px;
     width: 100%;
-    box-shadow: rgba(0, 0, 0, 0.2) 0px 1px 2px;
+    box-shadow: $default-shadow;
+    position: relative;
+    z-index: 16;
     &__box{
         max-width: 960px;
         height: 100%;
