--- a/code/public/css/app.css
+++ b/code/public/css/app.css
@@ -188,7 +188,7 @@ label {
 
 .container {
   width: 100%;
-  min-height: calc(100% - 120px);
+  min-height: calc(100% - 160px);
   background-color: white;
 }
 
@@ -210,9 +210,9 @@ label {
 }
 
 .content {
-  background-color: white;
+  min-height: 280px;
   width: 100%;
-  min-height: 480px;
+  background-color: white;
   box-shadow: rgba(0, 0, 0, 0.5) 0px 1px 2px;
 }
 
@@ -282,7 +282,7 @@ label {
 }
 
 .navi-list__content {
-  width: 320px;
+  width: 33%;
   height: 100%;
   display: inline-block;
   color: white;
@@ -304,5 +304,9 @@ label {
   background-color: steelblue;
   color: whitesmoke;
   border: 1px solid #98a1c2;
+}
+
+.content-center {
+  width: 34%;
 }
 
