--- a/code/resources/sass/shared/_navi_bar.scss
+++ b/code/resources/sass/shared/_navi_bar.scss
@@ -17,7 +17,7 @@
     width: 100%;
     height: 100%;
     &__content{
-        width: 320px;
+        width: 33%;
         height: 100%;
         display: inline-block;
         color: white;
@@ -38,4 +38,8 @@
             border: 1px solid $lightpurple;
         }
     }
+}
+
+.content-center{
+    width: 34%;
 }
