--- a/code/public/css/app.css
+++ b/code/public/css/app.css
@@ -188,7 +188,7 @@ label {
 
 .container {
   width: 100%;
-  min-height: calc(100% - 160px);
+  min-height: calc(100% - 200px);
   background-color: white;
 }
 
@@ -210,7 +210,7 @@ label {
 }
 
 .content {
-  min-height: 280px;
+  min-height: 960px;
   width: 100%;
   background-color: white;
   box-shadow: rgba(0, 0, 0, 0.5) 0px 1px 2px;
@@ -303,10 +303,56 @@ label {
 .navi-list__content__link:hover {
   background-color: steelblue;
   color: whitesmoke;
-  border: 1px solid #98a1c2;
+  border: 1px solid #8d99c4;
 }
 
 .content-center {
   width: 34%;
+}
+
+.footer {
+  width: 100%;
+  height: 100px;
+  background-color: #bec8dc;
+}
+
+.footer__box {
+  max-width: 960px;
+  height: 100%;
+  margin: 0 auto;
+  padding: 40px 10px 10px 10px;
+}
+
+.footer-content {
+  width: 100%;
+  height: 100%;
+  border-top: 1px solid #8d99c4;
+}
+
+.footer-content__left {
+  width: 60%;
+  height: 100%;
+  padding: 5px 10px 24px;
+  float: left;
+  line-height: 20px;
+}
+
+.footer-content__left__link {
+  color: #49578b;
+  font-size: 12px;
+}
+
+.footer-content__right {
+  width: 40%;
+  height: 100%;
+  padding: 5px 10px 24px;
+  float: right;
+  line-height: 20px;
+  text-align: right;
+}
+
+.footer-content__right__link {
+  color: #49578b;
+  font-size: 12px;
 }
 
