--- a/code/resources/sass/config/_config.scss
+++ b/code/resources/sass/config/_config.scss
@@ -2,9 +2,9 @@
 // *** 変数・mixin *** //
 
 
-$darkpurple: rgb(73, 87, 139);
-$lightpurple:  rgb(141, 153, 196);
-$purpleback: rgb(190, 200, 220);
+$darkpurple: rgb(80, 100, 180);
+$lightpurple:  rgb(120, 140, 190);
+$purpleback: rgb(180, 200, 230);
 
 $default-border: 1px solid $lightpurple;
 $default-back: #f0f0ef;
@@ -57,6 +57,15 @@ h1, h2, h3, h4, p, label{
     width: 100%;
     height: 320px;
     background-color: darkgray;
+    background-image: url("images/lilliputs_top2.jpg");
+    background-size: cover;
+}
+
+.smoke{
+    width: 100%;
+    height: 100%;
+    background-color: silver;
+    opacity: 0.3;
 }
 
 .main-contents{
