--- a/code/public/css/app.css
+++ b/code/public/css/app.css
@@ -155,7 +155,11 @@ legend {
   letter-spacing: 2px;
 }
 
-html,
+html {
+  width: 100%;
+  -webkit-text-size-adjust: 100%;
+}
+
 body {
   width: 100%;
   height: 100%;
@@ -192,21 +196,6 @@ label {
   background-color: white;
 }
 
-.top-wrapper {
-  width: 100%;
-  height: 320px;
-  background-color: darkgray;
-  background-image: url(/images/lilliputs_top2.jpg?3ef3de8909944c198eff1076dc63554f);
-  background-size: cover;
-}
-
-.smoke {
-  width: 100%;
-  height: 100%;
-  background-color: silver;
-  opacity: 0.3;
-}
-
 .main-contents {
   max-width: 960px;
   margin: 0 auto;
@@ -227,6 +216,32 @@ label {
 
 .sample {
   color: #5064b4;
+}
+
+.top-wrapper {
+  width: 100%;
+  height: 320px;
+  background-color: darkgray;
+  background-image: url(/images/lilliputs_top2.jpg?3ef3de8909944c198eff1076dc63554f);
+  background-size: cover;
+}
+
+.top-wrapper__box {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(32, 32, 32, 0.6);
+  display: flex;
+  align-items: center;
+}
+
+.top-wrapper__box__text {
+  max-width: 480px;
+  min-height: 50px;
+  margin: 0 auto;
+  text-align: center;
+  font-size: 36px;
+  color: whitesmoke;
+  font-weight: bold;
 }
 
 .header {
