リスト表示のレイアウト編集
・前回作成したリスト表示機能に関するレイアウトを編集しました。

--- a/code/resources/sass/app.scss
+++ b/code/resources/sass/app.scss
@@ -1,8 +1,8 @@
 @import "config/reset";
 @import "config/config";
 
-@import "sample";
-
 @import "shared/header";
 @import "shared/navi_bar";
 @import "shared/footer";
+
+@import "recipes/index";
