--- a/code/public/css/app.css
+++ b/code/public/css/app.css
@@ -193,60 +193,23 @@ label {
 .container {
   width: 100%;
   min-height: calc(100% - 200px);
-  background-color: white;
+  background-color: whitesmoke;
 }
 
 .main-contents {
   max-width: 960px;
   margin: 0 auto;
-  background-color: whitesmoke;
 }
 
 .main-contents__box {
   width: 100%;
-  padding: 10px;
-}
-
-.content {
-  min-height: 960px;
-  width: 100%;
-  background-color: white;
-  box-shadow: rgba(0, 0, 0, 0.5) 0px 1px 2px;
-}
-
-.sample {
-  color: #5064b4;
-}
-
-.top-wrapper {
-  width: 100%;
-  height: 320px;
-  background-color: darkgray;
-  background-image: url(/images/lilliputs_top2.jpg?3ef3de8909944c198eff1076dc63554f);
-  background-size: cover;
-}
-
-.top-wrapper__box {
-  width: 100%;
-  height: 100%;
-  background-color: rgba(32, 32, 32, 0.6);
-  display: flex;
-  align-items: center;
-}
-
-.top-wrapper__box__text {
-  max-width: 480px;
-  min-height: 50px;
-  margin: 0 auto;
-  text-align: center;
-  font-size: 36px;
-  color: whitesmoke;
-  font-weight: bold;
+  padding: 0 20px;
 }
 
 .header {
   height: 60px;
   width: 100%;
+  background-color: whitesmoke;
   box-shadow: rgba(0, 0, 0, 0.5) 0px 1px 2px;
   position: relative;
   z-index: 16;
@@ -337,6 +300,7 @@ label {
 .footer {
   width: 100%;
   height: 100px;
+  border-top: 1px solid #788cbe;
   background-color: #b4c8e6;
 }
 
@@ -378,5 +342,86 @@ label {
 .footer-content__right__link {
   color: #5064b4;
   font-size: 12px;
+}
+
+.top-wrapper {
+  width: 100%;
+  height: 320px;
+  background-color: darkgray;
+  background-image: url(/images/lilliputs_top2.jpg?3ef3de8909944c198eff1076dc63554f);
+  background-size: cover;
+}
+
+.top-wrapper__box {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(32, 32, 32, 0.6);
+  display: flex;
+  align-items: center;
+}
+
+.top-wrapper__box__text {
+  max-width: 480px;
+  min-height: 50px;
+  margin: 0 auto;
+  text-align: center;
+  font-size: 36px;
+  color: whitesmoke;
+  font-weight: bold;
+}
+
+.index-sections {
+  width: 100%;
+  padding-bottom: 40px;
+}
+
+.index-section {
+  width: 100%;
+  padding: 40px 0 0;
+}
+
+.index-section__box {
+  background-color: whitesmoke;
+  padding: 10px 20px 20px;
+}
+
+.index-section__box__head {
+  width: 100%;
+  height: 50px;
+  padding-left: 10px;
+  border-bottom: 1px solid #b4c8e6;
+  color: #5064b4;
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 50px;
+}
+
+.index-section__box__content {
+  width: 100%;
+  padding-top: 10px;
+}
+
+.recipe-list {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.recipe-panel {
+  width: 25%;
+  height: 240px;
+  padding: 4px 10px;
+}
+
+.recipe-panel__inner {
+  width: 100%;
+  height: 100%;
+  display: inline-block;
+  background-color: white;
+  border: 1px solid #b4c8e6;
+}
+
+.recipe-panel__inner:hover {
+  border: 1px solid #788cbe;
 }
 
