--- a/code/resources/sass/shared/_footer.scss
+++ b/code/resources/sass/shared/_footer.scss
@@ -2,6 +2,7 @@
 .footer{
     width: 100%;
     height: 100px;
+    border-top: 1px solid $lightpurple;
     background-color: $purpleback;
     &__box{
         max-width: 960px;
