--- a/code/resources/sass/shared/_header.scss
+++ b/code/resources/sass/shared/_header.scss
@@ -2,6 +2,7 @@
 .header{
     height: 60px;
     width: 100%;
+    background-color: whitesmoke;
     box-shadow: $default-shadow;
     position: relative;
     z-index: 16;
