--- a/code/resources/sass/config/_config.scss
+++ b/code/resources/sass/config/_config.scss
@@ -21,12 +21,7 @@ $gray-back: #dfdfdf;
   letter-spacing: 2px;
 }
 
-html {
-  width: 100%;
-  -webkit-text-size-adjust: 100%;
-}
-
-body {
+html, body {
   width: 100%;
   height: 100%;
   -webkit-text-size-adjust: 100%;
