--- a/code/resources/sass/recipes/_index.scss
+++ b/code/resources/sass/recipes/_index.scss
@@ -32,6 +32,7 @@
 .index-section{
     width: 100%;
     padding: 40px 0 0;
+    min-height: 320px;
     &__box{
         background-color: whitesmoke;
         padding: 10px 20px 20px;
@@ -60,8 +61,8 @@
 
 .recipe-panel{
     width: 25%;
-    height: 240px;
-    padding: 4px 10px;
+    height: 280px;
+    padding: 10px;
     &__inner{
         width: 100%;
         height: 100%;
@@ -73,3 +74,35 @@
         border: 1px solid $lightpurple;
     }
 }
+
+.panel-image{
+    width: 100%;
+    height: 200px;
+    background-color: silver;
+}
+
+.no-image{
+    color: whitesmoke;
+    line-height: 200px;
+    text-align: center;
+}
+
+.panel-info{
+    padding: 0 8px;
+    height: calc(100% - 200px);
+    &__title{
+        height: calc(100% - 20px);
+        font-size: 12px;
+        font-weight: bold;
+    }
+    &__property{
+        height: 20px;
+        line-height: 20px;
+        text-align: right;
+        font-size: 10px;
+        color: #333;
+        border-top: 1px solid silver;
+    }
+}
+
+
