--- a/code/public/css/app.css
+++ b/code/public/css/app.css
@@ -340,70 +340,6 @@ label {
   font-size: 12px;
 }
 
-.top-wrapper {
-  width: 100%;
-  height: 320px;
-  background-color: darkgray;
-  background-image: url(/images/lilliputs_top2.jpg?3ef3de8909944c198eff1076dc63554f);
-  background-size: cover;
-}
-
-.top-wrapper__box {
-  width: 100%;
-  height: 100%;
-  background-color: rgba(32, 32, 32, 0.6);
-  display: flex;
-  align-items: center;
-}
-
-.top-wrapper__box__text {
-  max-width: 480px;
-  min-height: 50px;
-  margin: 0 auto;
-  text-align: center;
-  font-size: 36px;
-  color: whitesmoke;
-  font-weight: bold;
-}
-
-.index-sections {
-  width: 100%;
-  padding-bottom: 40px;
-}
-
-.index-section {
-  width: 100%;
-  padding: 40px 0 0;
-  min-height: 320px;
-}
-
-.index-section__box {
-  background-color: whitesmoke;
-  padding: 10px 20px 20px;
-}
-
-.index-section__box__head {
-  width: 100%;
-  height: 50px;
-  padding-left: 10px;
-  border-bottom: 1px solid #b4c8e6;
-  color: #5064b4;
-  font-size: 24px;
-  font-weight: bold;
-  line-height: 50px;
-}
-
-.index-section__box__content {
-  width: 100%;
-  padding-top: 10px;
-}
-
-.recipe-list {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-}
-
 .recipe-panel {
   width: 25%;
   height: 280px;
@@ -443,6 +379,7 @@ label {
   height: calc(100% - 20px);
   font-size: 12px;
   font-weight: bold;
+  overflow: hidden;
 }
 
 .panel-info__property {
@@ -452,5 +389,107 @@ label {
   font-size: 10px;
   color: #333;
   border-top: 1px solid silver;
+}
+
+.top-wrapper {
+  width: 100%;
+  height: 320px;
+  background-color: darkgray;
+  background-image: url(/images/lilliputs_top2.jpg?3ef3de8909944c198eff1076dc63554f);
+  background-size: cover;
+}
+
+.top-wrapper__box {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(32, 32, 32, 0.6);
+  display: flex;
+  align-items: center;
+}
+
+.top-wrapper__box__text {
+  max-width: 480px;
+  min-height: 50px;
+  margin: 0 auto;
+  text-align: center;
+  font-size: 36px;
+  color: whitesmoke;
+  font-weight: bold;
+}
+
+.index-sections {
+  width: 100%;
+}
+
+.index-section {
+  width: 100%;
+  padding: 40px 0;
+  min-height: 320px;
+}
+
+.index-section__box {
+  background-color: whitesmoke;
+  padding: 10px 20px 20px;
+}
+
+.index-section__box__head {
+  width: 100%;
+  height: 50px;
+  padding-left: 10px;
+  border-bottom: 1px solid #788cbe;
+  color: #5064b4;
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 50px;
+}
+
+.index-section__box__content {
+  width: 100%;
+  padding-top: 10px;
+}
+
+.border-top {
+  border-top: 1px solid #b4c8e6;
+}
+
+.right-head {
+  padding-left: 0;
+  padding-right: 10px;
+  text-align: right;
+}
+
+.recipe-list {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.site-about-list {
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+}
+
+.site-about-list__box {
+  width: 100%;
+  height: 100%;
+}
+
+.site-about {
+  width: 100%;
+  padding: 16px 0;
+}
+
+.site-about__head {
+  max-width: 360px;
+  padding: 4px 0 4px 10px;
+  font-size: 16px;
+  font-weight: bold;
+  border-bottom: 1px solid #b4c8e6;
+}
+
+.site-about__content {
+  padding: 8px 0;
+  font-size: 12px;
 }
 
