--- a/code/resources/sass/recipes/_index.scss
+++ b/code/resources/sass/recipes/_index.scss
@@ -26,12 +26,11 @@
 
 .index-sections{
     width: 100%;
-    padding-bottom: 40px;
 }
 
 .index-section{
     width: 100%;
-    padding: 40px 0 0;
+    padding: 40px 0;
     min-height: 320px;
     &__box{
         background-color: whitesmoke;
@@ -40,7 +39,7 @@
             width: 100%;
             height: 50px;
             padding-left: 10px;
-            border-bottom: 1px solid $purpleback;
+            border-bottom: 1px solid $lightpurple;
             color: $darkpurple;
             font-size: 24px;
             font-weight: bold;
@@ -53,56 +52,44 @@
     }
 }
 
+.border-top{
+    border-top: 1px solid $purpleback;
+}
+
+.right-head{
+    padding-left: 0;
+    padding-right: 10px;
+    text-align: right;
+}
+
 .recipe-list{
     width: 100%;
     display: flex;
     flex-wrap: wrap;
 }
 
-.recipe-panel{
-    width: 25%;
-    height: 280px;
+.site-about-list{
+    width: 100%;
+    height: 100%;
     padding: 10px;
-    &__inner{
+    &__box{
         width: 100%;
         height: 100%;
-        display: inline-block;
-        background-color: white;
-        border: 1px solid $purpleback;
-    }
-    &__inner:hover{
-        border: 1px solid $lightpurple;
     }
 }
 
-.panel-image{
+.site-about{
     width: 100%;
-    height: 200px;
-    background-color: silver;
-}
-
-.no-image{
-    color: whitesmoke;
-    line-height: 200px;
-    text-align: center;
-}
-
-.panel-info{
-    padding: 0 8px;
-    height: calc(100% - 200px);
-    &__title{
-        height: calc(100% - 20px);
-        font-size: 12px;
+    padding: 16px 0;
+    &__head{
+        max-width: 360px;
+        padding: 4px 0 4px 10px;
+        font-size: 16px;
         font-weight: bold;
+        border-bottom: 1px solid $purpleback;
     }
-    &__property{
-        height: 20px;
-        line-height: 20px;
-        text-align: right;
-        font-size: 10px;
-        color: #333;
-        border-top: 1px solid silver;
+    &__content{
+        padding: 8px 0;
+        font-size: 12px;
     }
 }
-
-
