詳細ページのレイアウト編集
・show.blade.phpを編集し、レシピの詳細情報が表示できるようにしました。
・_show.scssを作成し、詳細ページの上部レイアウトに関する記述を追加しました。

--- a/code/resources/sass/config/_config.scss
+++ b/code/resources/sass/config/_config.scss
@@ -61,3 +61,15 @@ h1, h2, h3, h4, p, label{
         padding: 0 20px;
     }
 }
+
+.half-border{
+    width: 75%;
+    margin: 0 auto;
+    font-size: 0;
+    height: 1px;
+    border-top: 1px solid $purpleback;
+}
+
+.section-wheel{
+    margin-top: 40px;
+}
