--- a/code/public/css/app.css
+++ b/code/public/css/app.css
@@ -202,6 +202,18 @@ label {
   padding: 0 20px;
 }
 
+.half-border {
+  width: 75%;
+  margin: 0 auto;
+  font-size: 0;
+  height: 1px;
+  border-top: 1px solid #b4c8e6;
+}
+
+.section-wheel {
+  margin-top: 40px;
+}
+
 .header {
   height: 60px;
   width: 100%;
@@ -491,5 +503,69 @@ label {
 .site-about__content {
   padding: 8px 0;
   font-size: 12px;
+}
+
+.show-sections {
+  width: 100%;
+  padding: 40px 0;
+}
+
+.show-section {
+  width: 100%;
+  border: 1px solid #b4c8e6;
+  border-radius: 8px;
+  background-color: white;
+}
+
+.show-section__box {
+  width: 100%;
+  padding: 9px;
+}
+
+.show-head {
+  width: 100%;
+}
+
+.show-head__left {
+  width: 50%;
+  float: left;
+  padding: 10px;
+}
+
+.show-head__right {
+  width: 50%;
+  padding: 10px;
+  float: right;
+}
+
+.show-title {
+  color: #555555;
+  font-size: 24px;
+  font-weight: bold;
+  border-bottom: 1px solid #b4c8e6;
+  letter-spacing: 4px;
+}
+
+.show-category {
+  padding: 0 10px 40px;
+  font-size: 14px;
+  color: #555555;
+  text-align: right;
+}
+
+.show-description {
+  padding: 24px 10px;
+  font-size: 14px;
+  color: #898989;
+  letter-spacing: 4px;
+}
+
+.show-no-image {
+  width: 100%;
+  height: 430px;
+  line-height: 430px;
+  text-align: center;
+  background-color: silver;
+  color: white;
 }
 
