--- a/code/resources/sass/config/_config.scss
+++ b/code/resources/sass/config/_config.scss
@@ -5,6 +5,7 @@
 $darkpurple: rgb(80, 100, 180);
 $lightpurple:  rgb(120, 140, 190);
 $purpleback: rgb(180, 200, 230);
+$pencil: rgb(85, 85, 85);
 
 $default-border: 1px solid $lightpurple;
 $default-back: #f0f0ef;
