--- a/code/public/css/app.css
+++ b/code/public/css/app.css
@@ -569,12 +569,14 @@ label {
   color: white;
 }
 
-.ingredients {
+.ingredients,
+.ways {
   width: 100%;
   padding: 10px;
 }
 
-.ingredients__head {
+.ingredients__head,
+.ways__head {
   width: 50%;
   padding: 0 10px;
   border-bottom: 1px solid #b4c8e6;
@@ -583,7 +585,8 @@ label {
   color: #555555;
 }
 
-.ingredients__content {
+.ingredients__content,
+.ways__content {
   padding: 20px;
   min-height: 80px;
   color: #555555;
@@ -618,5 +621,42 @@ label {
   font-size: 14px;
   text-align: right;
   padding-right: 8px;
+}
+
+.site-about {
+  width: 100%;
+  padding: 16px 0;
+}
+
+.site-about__head {
+  max-width: 360px;
+  padding: 4px 0 4px 10px;
+  font-size: 16px;
+  font-weight: bold;
+  border-bottom: 1px solid #b4c8e6;
+}
+
+.site-about__content {
+  padding: 8px 0;
+  font-size: 12px;
+}
+
+.way-to-cook {
+  padding-top: 16px;
+}
+
+.way-number {
+  font-size: 24px;
+  font-weight: bold;
+  color: #788cbe;
+  display: block;
+  float: left;
+}
+
+.way-text {
+  font-size: 14px;
+  padding-top: 10px;
+  padding-left: 40px;
+  line-height: 24px;
 }
 
