--- a/code/public/css/app.css
+++ b/code/public/css/app.css
@@ -500,6 +500,12 @@ label {
   border-bottom: 1px solid #b4c8e6;
 }
 
+.site-about__head__number {
+  font-size: 24px;
+  font-weight: bold;
+  color: #788cbe;
+}
+
 .site-about__content {
   padding: 8px 0;
   font-size: 12px;
