--- a/code/resources/sass/recipes/_index.scss
+++ b/code/resources/sass/recipes/_index.scss
@@ -87,6 +87,11 @@
         font-size: 16px;
         font-weight: bold;
         border-bottom: 1px solid $purpleback;
+        &__number{
+            font-size: 24px;
+            font-weight: bold;
+            color: $lightpurple;
+        }
     }
     &__content{
         padding: 8px 0;
