Recipeモデルバリデーションの実装
・RecipeSaveRequestを作成し、バリデーションルールとメッセージに関する記述を追加しました。
・エラーメッセージをerrors.blade.phpとして作成し、フォームから読み込めるようにしました。
・エラーメッセージのレイアウトを_form.scssにて編集しました。

--- a/code/public/css/app.css
+++ b/code/public/css/app.css
@@ -689,3 +689,18 @@ label {
   background-color: white;
 }
 
+.errors {
+  width: 100%;
+  padding: 10px;
+}
+
+.errors__box {
+  background-color: whitesmoke;
+  padding: 10px;
+}
+
+.error {
+  font-size: 12px;
+  color: crimson;
+}
+
