--- a/code/resources/sass/recipes/_form.scss
+++ b/code/resources/sass/recipes/_form.scss
@@ -11,3 +11,17 @@
     border-radius: 4px;
     background-color: white;
 }
+
+.errors{
+    width: 100%;
+    padding: 10px;
+    &__box{
+        background-color: whitesmoke;
+        padding: 10px;
+    }
+}
+
+.error{
+    font-size: 12px;
+    color: crimson;
+}
