--- a/code/resources/sass/config/_config.scss
+++ b/code/resources/sass/config/_config.scss
@@ -49,7 +49,7 @@ h1, h2, h3, h4, p, label{
 
 .container{
     width: 100%;
-    min-height: calc(100% - 160px);
+    min-height: calc(100% - 200px);
     // 120 = header + footer
     background-color: whitesmoke;
 }
@@ -63,13 +63,17 @@ h1, h2, h3, h4, p, label{
     }
 }
 
+.single-container{
+    width: 100%;
+    min-height: calc(100% - 160px);
+    display: flex;
+    align-items: center;
+    background-color: whitesmoke;
+}
+
 .single-main{
-    max-width: 700px;
+    width: 700px;
     margin: 0 auto;
-    &__box{
-        width: 100%;
-        padding: 0 20px;
-    }
 }
 
 .half-border{
