投稿編集機能の実装
・RecipeControllerのeditとupdateを編集し、投稿編集機能を実装しました。
・RecipeControllerの新規投稿に関する部分の不要な記述を削除しました。
・ホワイトリストで制限して記載していたrecipes関連のルーティングをresouceの全てを対象に開放しました。

--- a/code/public/css/app.css
+++ b/code/public/css/app.css
@@ -704,6 +704,12 @@ label {
   background-color: white;
 }
 
+.form-recipe-title {
+  font-size: 20px;
+  color: #5064b4;
+  font-weight: bold;
+}
+
 .errors {
   width: 100%;
   padding: 10px;
