--- a/code/resources/sass/recipes/_form.scss
+++ b/code/resources/sass/recipes/_form.scss
@@ -12,6 +12,12 @@
     background-color: white;
 }
 
+.form-recipe-title{
+    font-size: 20px;
+    color: $darkpurple;
+    font-weight: bold;
+}
+
 .errors{
     width: 100%;
     padding: 10px;
