--- a/code/public/css/app.css
+++ b/code/public/css/app.css
@@ -269,6 +269,10 @@ label {
   padding-left: 5px;
 }
 
+.header-user-name {
+  font-size: 10px;
+}
+
 .navi-bar {
   width: 100%;
   height: 40px;
@@ -769,13 +773,15 @@ label {
   font-weight: bold;
 }
 
-.destroy-form {
+.destroy-form,
+.logout-form {
   width: 100%;
   padding-top: 20px;
   text-align: center;
 }
 
-.destroy-form__button {
+.destroy-form__button,
+.logout-form__button {
   padding: 4px 20px;
   background-color: #5064b4;
   border: 1px solid silver;
