--- a/code/resources/sass/recipes/_show.scss
+++ b/code/resources/sass/recipes/_show.scss
@@ -40,7 +40,7 @@
 
 .show-link{
     text-align: right;
-    &__edit, &__destroy{
+    &__edit, &__destroy, &__user{
         font-size: 12px;
     }
 }
