軽微な修正
・ciのテストが通らない問題を解決するため、user_idにdefault_valueを設定しました。

--- a/code/public/css/app.css
+++ b/code/public/css/app.css
@@ -585,7 +585,7 @@ label {
 .show-category {
   padding: 0 10px 40px;
   font-size: 14px;
-  color: #555555;
+  color: #5064b4;
   text-align: right;
 }
 
