--- a/code/resources/sass/recipes/_show.scss
+++ b/code/resources/sass/recipes/_show.scss
@@ -48,7 +48,7 @@
 .show-category{
     padding: 0 10px 40px;
     font-size: 14px;
-    color: $pencil;
+    color: $darkpurple;
     text-align: right;
 }
 
