新規登録ページのレイアウト編集
・_auth.scssとregister.blade.phpを編集し、新規登録ページのレイアウトを調整しました。

--- a/code/public/css/app.css
+++ b/code/public/css/app.css
@@ -861,3 +861,10 @@ label {
   -webkit-appearance: none;
 }
 
+.invalid-feedback {
+  padding: 4px;
+  background-color: whitesmoke;
+  color: crimson;
+  font-size: 12px;
+}
+
