--- a/code/resources/sass/users/_auth.scss
+++ b/code/resources/sass/users/_auth.scss
@@ -62,3 +62,10 @@
         -webkit-appearance: none;
     }
 }
+
+.invalid-feedback{
+    padding: 4px;
+    background-color: whitesmoke;
+    color: crimson;
+    font-size: 12px;
+}
