--- a/code/public/css/app.css
+++ b/code/public/css/app.css
@@ -227,6 +227,18 @@ label {
   margin-top: 40px;
 }
 
+.temp-left {
+  float: left;
+  width: 60%;
+  padding: 5px 20px;
+}
+
+.temp-right {
+  float: right;
+  width: 40%;
+  padding: 5px 20px;
+}
+
 .header {
   height: 60px;
   width: 100%;
