--- a/code/resources/sass/config/_config.scss
+++ b/code/resources/sass/config/_config.scss
@@ -87,3 +87,18 @@ h1, h2, h3, h4, p, label{
 .section-wheel{
     margin-top: 40px;
 }
+
+
+
+
+
+.temp-left{
+    float: left;
+    width: 60%;
+    padding: 5px 20px;
+}
+.temp-right{
+    float: right;
+    width: 40%;
+    padding: 5px 20px;
+}
