--- a/code/public/css/app.css
+++ b/code/public/css/app.css
@@ -721,6 +721,22 @@ label {
   background-color: white;
 }
 
+.recipe-form__box {
+  width: 100%;
+}
+
+.recipe-form__box__head {
+  padding: 0 20px 10px 20px;
+  font-size: 24px;
+  text-align: center;
+  font-weight: bold;
+  border-bottom: 1px solid #b4c8e6;
+}
+
+.recipe-form__box__content {
+  padding: 10px;
+}
+
 .form-recipe-title {
   font-size: 20px;
   color: #5064b4;
@@ -740,6 +756,121 @@ label {
 .error {
   font-size: 12px;
   color: crimson;
+}
+
+.recipe-fields {
+  width: 100%;
+}
+
+.recipe-field {
+  width: 100%;
+  padding: 10px 20px;
+}
+
+.recipe-field__label {
+  padding-bottom: 8px;
+}
+
+.recipe-field__label__text {
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.recipe-field__input {
+  width: 100%;
+}
+
+.recipe-field__input__textbox {
+  width: 100%;
+  font-size: 14px;
+  padding: 8px 12px;
+  border: 1px solid #788cbe;
+  border-radius: 4px;
+}
+
+.recipe-field__input__textarea {
+  width: 100%;
+  height: 160px;
+  font-size: 14px;
+  padding: 8px 12px;
+  border: 1px solid #788cbe;
+  border-radius: 4px;
+  resize: none;
+}
+
+.ingredient-form {
+  width: 100%;
+  padding: 28px 20px;
+}
+
+.ingredient-form__head {
+  padding-bottom: 20px;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.ingredient-form__secondhead {
+  font-size: 12px;
+}
+
+.ingredient-form__secondhead__name {
+  width: 60%;
+  padding-left: 6px;
+  float: left;
+}
+
+.ingredient-form__secondhead__amount {
+  width: 40%;
+  padding-left: 16px;
+  float: right;
+}
+
+.ingredient-field {
+  padding: 8px 0;
+}
+
+.ingredient-field__name {
+  width: 60%;
+  float: left;
+}
+
+.ingredient-field__name__input {
+  width: 100%;
+  padding: 4px 8px;
+  border: 1px solid #788cbe;
+  border-radius: 4px;
+}
+
+.ingredient-field__amount {
+  width: 40%;
+  padding-left: 10px;
+  float: right;
+}
+
+.ingredient-field__amount__input {
+  width: 100%;
+  padding: 4px 8px;
+  border: 1px solid #788cbe;
+  border-radius: 4px;
+}
+
+.recipe-submit {
+  width: 100%;
+  text-align: center;
+  padding-top: 20px;
+}
+
+.recipe-submit__button {
+  padding: 8px 20px;
+  background-color: #5064b4;
+  font-size: 14px;
+  color: whitesmoke;
+  border: 1px solid #5064b4;
+  -webkit-appearance: none;
+}
+
+.recipe-submit__button:hover {
+  background-color: steelblue;
 }
 
 .confirm-section {
@@ -801,6 +932,10 @@ label {
   cursor: pointer;
   color: whitesmoke;
   -webkit-appearance: none;
+}
+
+.extra-padding {
+  padding-bottom: 30px;
 }
 
 .auth-section {
