--- a/code/resources/sass/recipes/_form.scss
+++ b/code/resources/sass/recipes/_form.scss
@@ -10,6 +10,19 @@
     border: 1px solid $purpleback;
     border-radius: 4px;
     background-color: white;
+    &__box{
+        width: 100%;
+        &__head{
+            padding: 0 20px 10px 20px;
+            font-size: 24px;
+            text-align: center;
+            font-weight: bold;
+            border-bottom: 1px solid $purpleback;
+        }
+        &__content{
+            padding: 10px;
+        }
+    }
 }
 
 .form-recipe-title{
@@ -30,4 +43,104 @@
 .error{
     font-size: 12px;
     color: crimson;
+}
+
+.recipe-fields{
+    width: 100%;
+}
+
+.recipe-field{
+    width: 100%;
+    padding: 10px 20px;
+    &__label{
+        padding-bottom: 8px;
+        &__text{
+            font-size: 14px;
+            font-weight: bold;
+        }
+    }
+    &__input{
+        width: 100%;
+        &__textbox{
+            width: 100%;
+            font-size: 14px;
+            padding: 8px 12px;
+            border: 1px solid $lightpurple;
+            border-radius: 4px;
+        }
+        &__textarea{
+            width: 100%;
+            height: 160px;
+            font-size: 14px;
+            padding: 8px 12px;
+            border: 1px solid $lightpurple;
+            border-radius: 4px;
+            resize: none;
+        }
+    }
+}
+
+.ingredient-form{
+    width: 100%;
+    padding: 28px 20px;
+    &__head{
+        padding-bottom: 20px;
+        font-size: 14px;
+        font-weight: bold;
+    }
+    &__secondhead{
+        font-size: 12px;
+        &__name{
+            width: 60%;
+            padding-left: 6px;
+            float: left;
+        }
+        &__amount{
+            width: 40%;
+            padding-left: 16px;
+            float: right;
+        }
+    }
+}
+
+.ingredient-field{
+    padding: 8px 0;
+    &__name{
+        width: 60%;
+        float: left;
+        &__input{
+            width: 100%;
+            padding: 4px 8px;
+            border: 1px solid $lightpurple;
+            border-radius: 4px;
+        }
+    }
+    &__amount{
+        width: 40%;
+        padding-left: 10px;
+        float: right;
+        &__input{
+            width: 100%;
+            padding: 4px 8px;
+            border: 1px solid $lightpurple;
+            border-radius: 4px;
+        }
+    }
+}
+
+.recipe-submit{
+    width: 100%;
+    text-align: center;
+    padding-top: 20px;
+    &__button{
+        padding: 8px 20px;
+        background-color: $darkpurple;
+        font-size: 14px;
+        color: whitesmoke;
+        border: 1px solid $darkpurple;
+        -webkit-appearance: none;
+    }
+    &__button:hover{
+        background-color: steelblue;
+    }
 }
