レシピに紐づく材料群の表示
・show.blade.phpとingredient.blade.phpを編集し、レシピの材料を表示できるようにしました。

--- a/code/public/css/app.css
+++ b/code/public/css/app.css
@@ -836,7 +836,8 @@ label {
 
 .ingredient-field__name__input {
   width: 100%;
-  padding: 4px 8px;
+  padding: 6px 8px;
+  font-size: 12px;
   border: 1px solid #788cbe;
   border-radius: 4px;
 }
@@ -849,7 +850,8 @@ label {
 
 .ingredient-field__amount__input {
   width: 100%;
-  padding: 4px 8px;
+  padding: 6px 8px;
+  font-size: 12px;
   border: 1px solid #788cbe;
   border-radius: 4px;
 }
