--- a/code/resources/sass/recipes/_form.scss
+++ b/code/resources/sass/recipes/_form.scss
@@ -110,7 +110,8 @@
         float: left;
         &__input{
             width: 100%;
-            padding: 4px 8px;
+            padding: 6px 8px;
+            font-size: 12px;
             border: 1px solid $lightpurple;
             border-radius: 4px;
         }
@@ -121,7 +122,8 @@
         float: right;
         &__input{
             width: 100%;
-            padding: 4px 8px;
+            padding: 6px 8px;
+            font-size: 12px;
             border: 1px solid $lightpurple;
             border-radius: 4px;
         }
