材料群の編集機能の実装
・edit.blade.phpのレシピ編集フォームに材料群編集用の項目を追加しました。
・Ingredient.phpにフォームから送信されてきた値を処理し一括保存するbulkUpdate関数を定義しました。
・RecipeControllerのupdateからbulkUpdateを呼び出す記述を追加し、編集機能を有効化しました。

--- a/code/public/css/app.css
+++ b/code/public/css/app.css
@@ -727,7 +727,7 @@ label {
 
 .recipe-form__box__head {
   padding: 0 20px 10px 20px;
-  font-size: 24px;
+  font-size: 20px;
   text-align: center;
   font-weight: bold;
   border-bottom: 1px solid #b4c8e6;
@@ -827,6 +827,10 @@ label {
 
 .ingredient-field {
   padding: 8px 0;
+}
+
+.ingredient-field__id {
+  display: none;
 }
 
 .ingredient-field__name {
