--- a/code/resources/sass/recipes/_form.scss
+++ b/code/resources/sass/recipes/_form.scss
@@ -14,7 +14,7 @@
         width: 100%;
         &__head{
             padding: 0 20px 10px 20px;
-            font-size: 24px;
+            font-size: 20px;
             text-align: center;
             font-weight: bold;
             border-bottom: 1px solid $purpleback;
@@ -105,6 +105,9 @@
 
 .ingredient-field{
     padding: 8px 0;
+    &__id{
+        display: none;
+    }
     &__name{
         width: 60%;
         float: left;
