--- a/code/resources/sass/recipes/_form.scss
+++ b/code/resources/sass/recipes/_form.scss
@@ -149,3 +149,42 @@
         background-color: steelblue;
     }
 }
+
+.process-form{
+    width: 100%;
+    padding: 28px 20px;
+    &__head{
+        padding-bottom: 10px;
+        font-size: 14px;
+        font-weight: bold;
+    }
+    &__content{
+        padding-bottom: 20px;
+    }
+}
+
+.process-field{
+    padding-top: 16px;
+    &__head{
+        float: left;
+        width: 24px;
+        font-size: 16px;
+        font-weight: bold;
+        color: $lightpurple;
+        font-weight: bold;
+    }
+    &__input{
+        float: right;
+        width: calc(100% - 24px);
+        padding-left: 16px;
+        &__textarea{
+            width: 100%;
+            height: 60px;
+            padding: 8px 12px;
+            border: 1px solid $lightpurple;
+            border-radius: 4px;
+            font-size: 12px;
+            resize: none;
+        }
+    }
+}
