--- a/code/public/css/app.css
+++ b/code/public/css/app.css
@@ -618,13 +618,13 @@ label {
 }
 
 .ingredients,
-.ways {
+.processes {
   width: 100%;
   padding: 10px;
 }
 
 .ingredients__head,
-.ways__head {
+.processes__head {
   width: 50%;
   padding: 0 10px;
   border-bottom: 1px solid #b4c8e6;
@@ -634,7 +634,7 @@ label {
 }
 
 .ingredients__content,
-.ways__content {
+.processes__content {
   padding: 20px;
   min-height: 80px;
   color: #555555;
@@ -689,11 +689,11 @@ label {
   font-size: 12px;
 }
 
-.way-to-cook {
+.process {
   padding-top: 16px;
 }
 
-.way-number {
+.process-number {
   font-size: 24px;
   font-weight: bold;
   color: #788cbe;
@@ -701,7 +701,7 @@ label {
   float: left;
 }
 
-.way-text {
+.process-text {
   font-size: 14px;
   padding-top: 10px;
   padding-left: 40px;
