--- a/code/resources/sass/recipes/_show.scss
+++ b/code/resources/sass/recipes/_show.scss
@@ -69,7 +69,7 @@
 }
 
 
-.ingredients, .ways{
+.ingredients, .processes{
     width: 100%;
     padding: 10px;
     &__head{
@@ -131,11 +131,11 @@
     }
 }
 
-.way-to-cook{
+.process{
     padding-top: 16px;
 }
 
-.way-number{
+.process-number{
     font-size: 24px;
     font-weight: bold;
     color: $lightpurple;
@@ -143,7 +143,7 @@
     float: left;
 }
 
-.way-text{
+.process-text{
     font-size: 14px;
     padding-top: 10px;
     padding-left: 40px;
