詳細ページ主材料と調理法の表示
・show.blade.phpを編集し、詳細ページでレシピの主材料と調理法を表示できるようにしました。
・_show.scssを編集しレイアウトを調整しました。

--- a/code/public/css/app.css
+++ b/code/public/css/app.css
@@ -597,8 +597,14 @@ label {
 .show-category {
   padding: 0 10px 40px;
   font-size: 14px;
+  font-weight: bold;
   color: #5064b4;
   text-align: right;
+}
+
+.show-category__symbol {
+  color: #333;
+  font-weight: normal;
 }
 
 .show-description {
