フォームのレイアウト調整
・新規投稿/編集フォームのMaingred/Methodの項目が追加された部分に関してのレイアウトを調整しました。

--- a/code/resources/sass/shared/_header.scss
+++ b/code/resources/sass/shared/_header.scss
@@ -40,4 +40,9 @@
 
 .header-user-name{
     font-size: 10px;
+    strong{
+        color: $darkpurple;
+        font-size: 12px;
+        font-weight: bold;
+    }
 }
