--- a/code/resources/sass/recipes/_form.scss
+++ b/code/resources/sass/recipes/_form.scss
@@ -51,7 +51,7 @@
 
 .recipe-field{
     width: 100%;
-    padding: 10px 20px;
+    padding: 20px;
     &__label{
         padding-bottom: 8px;
         &__text{
@@ -78,6 +78,25 @@
             resize: none;
         }
     }
+}
+
+.half-field{
+    width: 50%;
+    padding: 8px;
+    select{
+        width: 100%;
+        padding: 8px 16px;
+        font-size: 12px;
+        border: 1px solid $lightpurple;
+        border-radius: 4px;
+    }
+}
+
+.field-left{
+    float: left;
+}
+.field-right{
+    float: right;
 }
 
 .ingredient-form{
