--- a/code/resources/sass/shared/_recipe_panel.scss
+++ b/code/resources/sass/shared/_recipe_panel.scss
@@ -41,7 +41,7 @@
         line-height: 20px;
         text-align: right;
         font-size: 10px;
-        color: #333;
+        color: $darkpurple;
         border-top: 1px solid silver;
     }
 }
