--- a/code/public/css/app.css
+++ b/code/public/css/app.css
@@ -608,9 +608,14 @@ label {
   letter-spacing: 4px;
 }
 
-.show-no-image {
+.show-image {
   width: 100%;
   height: 430px;
+}
+
+.show-no-image {
+  width: 100%;
+  height: 100%;
   line-height: 430px;
   text-align: center;
   background-color: silver;
