編集フォーム画像投稿機能
・edit.blade.phpを編集し、フォームに画像アップロード用フィールドを追加しました。
・RecipeController@updateを編集し、レシピ編集時にも画像が保存できるようにしました。
・画像なしで投稿・編集した際にもエラーを送出しないよう設定を行いました。

--- a/code/public/css/app.css
+++ b/code/public/css/app.css
@@ -803,6 +803,17 @@ label {
   resize: none;
 }
 
+.recipe-field__input__attention {
+  padding: 0 0 10px 10px;
+  font-size: 10px;
+  color: #5064b4;
+}
+
+.recipe-field__input__image {
+  width: 100%;
+  font-size: 12px;
+}
+
 .half-field {
   width: 50%;
   padding: 8px;
