タイトル検索ページの実装
・RecipeSearchControllerにtitleアクションを追加、ルーティングと仮のビューを作成し、タイトル検索ページを実装しました。
・タイトル検索ページへのリンクを整備しました。

--- a/code/public/css/app.css
+++ b/code/public/css/app.css
@@ -1025,6 +1025,11 @@ label {
   padding-bottom: 30px;
 }
 
+.search-wrapper {
+  width: 100%;
+  padding: 40px 0;
+}
+
 .search-contents {
   width: 100%;
   background-color: white;
@@ -1032,7 +1037,7 @@ label {
 }
 
 .search-contents__box {
-  padding: 10px;
+  padding: 9px;
 }
 
 .search-contents__box__head {
