ルーレットの事前レイアウト調整
・実装中のルーレット機能に関するレイアウトを、実際に動かす前に静的な状態で設置しました。

--- a/code/resources/sass/recipes/_search.scss
+++ b/code/resources/sass/recipes/_search.scss
@@ -3,6 +3,11 @@
     padding: 40px 0;
 }
 
+.search-wrapper-single{
+    width: 100%;
+    padding: 10px;
+}
+
 .search-contents{
     width: 100%;
     background-color: white;
