--- a/code/public/css/app.css
+++ b/code/public/css/app.css
@@ -1030,6 +1030,11 @@ label {
   padding: 40px 0;
 }
 
+.search-wrapper-single {
+  width: 100%;
+  padding: 10px;
+}
+
 .search-contents {
   width: 100%;
   background-color: white;
@@ -1137,6 +1142,83 @@ label {
   padding: 8px 16px;
   border: 1px solid #5064b4;
   border-radius: 4px;
+}
+
+.recipe_roulette {
+  width: 100%;
+}
+
+.recipe_roulette__box {
+  width: 100%;
+  padding: 10px;
+}
+
+.roulette-fields {
+  width: 100%;
+  padding: 10px 0;
+  max-width: 600px;
+  margin: 0 auto;
+  min-height: 260px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.roulette-field {
+  padding: 10px;
+}
+
+.roulette-panel {
+  display: inline-block;
+  width: 240px;
+  height: 240px;
+  background-color: #b4c8e6;
+  border: 1px solid #5064b4;
+  border-radius: 4px;
+  text-align: center;
+}
+
+.roulette-panel__text {
+  color: white;
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 240px;
+}
+
+.roulette-panel__text i {
+  line-height: 240px;
+}
+
+.roulette-symbol {
+  display: inline-block;
+  padding: 10px 0;
+  text-align: center;
+  line-height: 240px;
+  width: calc(100% - 520px);
+}
+
+.roulette-symbol i {
+  font-size: 24px;
+  font-weight: bold;
+  color: #5064b4;
+}
+
+.roulette-button {
+  width: 100%;
+  text-align: center;
+  padding: 20px 0 10px;
+}
+
+.roulette-button__link {
+  display: inline-block;
+  padding: 8px 16px;
+  font-size: 14px;
+  color: whitesmoke;
+  background-color: #5064b4;
+}
+
+.roulette-button__link:hover {
+  background-color: steelblue;
+  color: whitesmoke;
 }
 
 .auth-section {
