--- a/code/public/css/app.css
+++ b/code/public/css/app.css
@@ -1156,9 +1156,9 @@ label {
 .roulette-fields {
   width: 100%;
   padding: 10px 0;
-  max-width: 600px;
+  max-width: 520px;
   margin: 0 auto;
-  min-height: 260px;
+  min-height: 220px;
   display: flex;
   flex-wrap: wrap;
 }
@@ -1169,8 +1169,8 @@ label {
 
 .roulette-panel {
   display: inline-block;
-  width: 240px;
-  height: 240px;
+  width: 200px;
+  height: 200px;
   background-color: #b4c8e6;
   border: 1px solid #5064b4;
   border-radius: 4px;
@@ -1181,24 +1181,24 @@ label {
   color: white;
   font-size: 24px;
   font-weight: bold;
-  line-height: 240px;
+  line-height: 200px;
+  height: 100%;
+  width: 100%;
 }
 
 .roulette-panel__text i {
-  line-height: 240px;
+  line-height: 200px;
 }
 
 .roulette-symbol {
   display: inline-block;
   padding: 10px 0;
   text-align: center;
-  line-height: 240px;
-  width: calc(100% - 520px);
+  line-height: 200px;
+  width: calc(100% - 440px);
 }
 
 .roulette-symbol i {
-  font-size: 24px;
-  font-weight: bold;
   color: #5064b4;
 }
 
