--- a/code/resources/sass/shared/_recipe_panel.scss
+++ b/code/resources/sass/shared/_recipe_panel.scss
@@ -19,6 +19,12 @@
     width: 100%;
     height: 200px;
     background-color: silver;
+    text-align: center;
+    img{
+        min-width: 200px;
+        max-width: 100%;
+        height: 100%;
+    }
 }
 
 .no-image{
