--- a/code/resources/sass/recipes/_show.scss
+++ b/code/resources/sass/recipes/_show.scss
@@ -67,6 +67,11 @@
 .show-image{
     width: 100%;
     height: 430px;
+    img{
+        min-width: 430px;
+        max-width: 100%;
+        height: 430px;
+    }
 }
 
 .show-no-image{
@@ -91,7 +96,7 @@
         color: $pencil;
     }
     &__content{
-        padding: 20px;
+        padding: 24px 8px;
         min-height: 80px;
         color: $pencil;
     }
@@ -104,19 +109,21 @@
 
 .ingredient{
     width: 50%;
-    padding: 4px 20px;
+    padding: 8px 10px;
     &__box{
         border-bottom: 1px solid $purpleback;
         &__name{
-            float: left;
-            width: 70%;
+            display: inline-block;
+            width: 65%;
             color: $pencil;
             font-size: 14px;
+            font-weight: bold;
             padding-left: 8px;
         }
         &__amount{
-            float: right;
-            width: 30%;
+            display: inline-block;
+            padding-left: 10px;
+            width: 35%;
             color: $pencil;
             font-size: 14px;
             text-align: right;
