--- a/code/resources/sass/config/_responsive.scss
+++ b/code/resources/sass/config/_responsive.scss
@@ -81,6 +81,10 @@
         }
     }
 
+    .header-link{
+        font-size: 12px;
+    }
+
     // トップページ関連
     .top-wrapper__box__text{
         font-size: 20px;
