フォーム関連のレスポンシブ対応
・スマートフォンから閲覧した際の投稿・編集フォームのレイアウトを調整しました。

--- a/code/public/css/app.css
+++ b/code/public/css/app.css
@@ -1383,6 +1383,12 @@ label {
   }
 }
 
+@media (max-width: 550px) {
+  .recipe-form {
+    padding: 19px 0;
+  }
+}
+
 @media (max-width: 512px) {
   .recipe-panel {
     width: 100%;
