--- a/code/resources/sass/config/_responsive.scss
+++ b/code/resources/sass/config/_responsive.scss
@@ -66,6 +66,16 @@
 
 }
 
+
+@media (max-width: 550px) {
+
+    .recipe-form{
+        padding: 19px 0;
+    }
+
+}
+
+
 @media (max-width: 512px) {
 
     // 共通
