ルーレット関連レスポンシブ設定
・ルーレット関連ページのレイアウトをスマートフォンからの閲覧に対応させました。

--- a/code/public/css/app.css
+++ b/code/public/css/app.css
@@ -1436,5 +1436,21 @@ label {
   .ingredient__box__name {
     font-size: 12px;
   }
+
+  .roulette-fields {
+    display: block;
+    flex-wrap: nowrap;
+  }
+
+  .roulette-field {
+    text-align: center;
+  }
+
+  .roulette-symbol {
+    width: 100%;
+    padding: 0;
+    line-height: normal;
+    text-align: center;
+  }
 }
 
