ヘッダーの微修正
・ログイン中に表示されるユーザー名の項目をスマートフォンから閲覧した時のみ非表示になるように修正しました。

--- a/code/public/css/app.css
+++ b/code/public/css/app.css
@@ -1405,6 +1405,10 @@ label {
     font-size: 12px;
   }
 
+  .header-user-name {
+    display: none;
+  }
+
   .top-wrapper__box__text {
     font-size: 20px;
   }
