--- a/code/resources/sass/config/_responsive.scss
+++ b/code/resources/sass/config/_responsive.scss
@@ -95,6 +95,10 @@
         font-size: 12px;
     }
 
+    .header-user-name{
+        display: none;
+    }
+
     // トップページ関連
     .top-wrapper__box__text{
         font-size: 20px;
